--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/xxx
+spring.datasource.url=jdbc:mysql://localhost:3306/jxf
 spring.datasource.username=root
 spring.datasource.password=ahmids
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
